--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,7 @@
 <p>Main Menu</p>
 <ul>
 	<li><a href="/contacts">View all contacts</a></li>
+	<li><a href="/contacts/new">Add a Contact</a></li>
+
 	<!-- going to have other actions here -->
 </ul>
