--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<h1>You're using <%= @crm_app_name %></h1>
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		<title>Jimi's CRM</title>
 	</head>
 	<body>
+		<header>
+			<h1>You're using <%= @crm_app_name %></h1>
+
+		</header>
+
 		<%= yield %>
+
+		<footer>
+			<h5>This website was made by Jimi Vyas. If you enjoy using it, please consider donating to jimipvyas+paypal.com</h5>	
+		</footer>
 	</body>
 </html>
