--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,2 @@
 <p>Main Menu</p>
-<ul>
-	<li><a href="/contacts">View all contacts</a></li>
-	<li><a href="/contacts/new">Add a Contact</a></li>
-
-	<!-- going to have other actions here -->
-</ul>
+<p>Please choose an option from the sidebar on the left!</p>
