--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,8 +15,7 @@
 			<ul>
 				<li><a href="/contacts">View all contacts</a></li>
 				<li><a href="/contacts/new">Add a contact</a></li>
-				<li><a href="/contacts/modify">Modify a contact</a></li>
-				<li><a href="contacts/delete">Delete a contact</a></li>
+				<li><a href="/contacts/:id/edit">Edit last viewed contact</a></li>
 			</ul>
 			</nav>
 		</div>
