--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -5,5 +5,6 @@
 
 <form action="/contacts<%= @contact.id %>" method="post">
 	<input type="hidden" name="_method" value="delete">
-	<input type="submit" name="Delete Contact">
+	<input type="submit" name="Delete Contact" value="delete contact">
 </form>
+
