finished up css

--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,9 +1,25 @@
 <h1>Create new Contact</h1>
 
 <form action="/contacts" method="post">
-	<input type="text" name="first_name">
-	<input type="text" name="last_name">
-	<input type="text" name="email">
-	<input type="text" name="note">
-	<input type="submit" name="submit">
+<table>
+	<tr>
+		<td>First name: </td>
+		<td><input type="text" name="first_name"></td>
+	</tr>
+	<tr>
+		<td>Last name:</td>
+		<td><input type="text" name="last_name"></td>
+	</tr>
+	<tr>
+		<td>Email: </td>
+		<td><input type="text" name="email"></td>
+	</tr>
+	<tr>
+		<td> Note: </td>
+		<td><input type="text" name="note"></td>
+	</tr>
+	<tr>
+		<td><input type="submit" name="submit"></td>
+	</tr>
+	</table>
 </form>
