--- a/public/style.css
+++ b/public/style.css
@@ -8,26 +8,36 @@ ul {
 	font-style: italic;
 }
 
-.left {
-	display: inline-block;
-	width: 10%;
-	height: 400px;
-	background-color: #C8DEE9;
-	margin-bottom: 10px;
-}
 
-.right {
-	vertical-align: top;
-	display: inline-block;
-	width: 88%;
-	height: 400px;
+.left {
+	position: absolute;	
+	left: 10px;
+	top: 100px;
+	margin-bottom: 10px;
+	height: 70%;
+	width: 120px;
+	padding: 0px, 10px, 0px, 10px;
 	background-color: #F4fdB3;
 	margin-bottom: 10px;
 }
 
+.right {
+	position: absolute;
+	left: 150px; 
+	/* 10 + 10 + 100 (+20 for good measure)*/
+	top: 100px;
+	height: 70%;
+	margin-bottom: 10px;
+/*	padding: 0px, 10px, 0px, 10px;
+*/	background-color: #C8DEE9;
+}
 
-footer {
-	clear: both;
-	text-align: center;
 
+
+footer {   
+	position: absolute;
+    top: 90%;
+    width:400px;
+    margin-left:-200px;
+    left:50%;
 }
