--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,7 +1,11 @@
-<h1>All Contacts:</h1>
+<h1>Displaying all contacts:</h1>
 
 <ul>
 <% @contacts.each do |contact| %>
-	<li><%= contact.first_name %> <%= contact.last_name %>, <%= contact.email %>: <%= contact.note %></li>
+	<li><%= contact.first_name %> <%= contact.last_name %>, <%= contact.email %>: <%= contact.note %>
+	<form action="/contacts/<%= contact.id %>/edit" method="get"> 
+		<input type="submit" name="submit" value="Edit" />
+	</form>
+	</li>
 	<% end %>
 </ul>
