--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -1,7 +1,7 @@
 <h1>Edit a Contact</h1>
 
-<form action="/contacts<%= @contact.id %>" method="post">
-	<input type="hidden" name="_method" value="post">
+<form action="/contacts/<%= @contact.id %>" method="post">
+	<input type="hidden" name="_method" value="put">
 	<input type="text" name="first_name" value="<%= @contact.first_name %>">
 	<input type="text" name="last_name" value="<%= @contact.last_name %>">
 	<input type="text" name="email" value="<%= @contact.email %>">
