--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -3,8 +3,7 @@
 <p><strong>Note:</strong></p>
 <p><%= @contact.note %></p>
 
-<form action="/contacts<%= @contact.id %>" method="post">
+<form action="/contacts/<%= @contact.id %>" method="post">
 	<input type="hidden" name="_method" value="delete">
 	<input type="submit" name="Delete Contact" value="delete contact">
 </form>
-
